v1.0.0/modules/schema/pages/enumeration/UnitMultiplier.adoc
= `UnitMultiplier`
:toclevels: 4


+++The unit multipliers defined for the CIM.  When applied to unit symbols, the unit symbol is treated as a derived unit. Regardless of the contents of the unit symbol text, the unit symbol shall be treated as if it were a single-character unit symbol. Unit symbols should not contain multipliers, and it should be left to the multiplier to define the multiple for an entire data type. 

For example, if a unit symbol is "m2Pers" and the multiplier is "k", then the value is k(m**2/s), and the multiplier applies to the entire final value, not to any individual part of the value. This can be conceptualized by substituting a derived unit symbol for the unit type. If one imagines that the symbol "Þ" represents the derived unit "m2Pers", then applying the multiplier "k" can be conceptualized simply as "kÞ".

For example, the SI unit for mass is "kg" and not "g".  If the unit symbol is defined as "kg", then the multiplier is applied to "kg" as a whole and does not replace the "k" in front of the "g". In this case, the multiplier of "m" would be used with the unit symbol of "kg" to represent one gram.  As a text string, this violates the instructions in IEC 80000-1. However, because the unit symbol in CIM is treated as a derived unit instead of as an SI unit, it makes more sense to conceptualize the "kg" as if it were replaced by one of the proposed replacements for the SI mass symbol. If one imagines that the "kg" were replaced by a symbol "Þ", then it is easier to conceptualize the multiplier "m" as creating the proper unit "mÞ", and not the forbidden unit "mkg".+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:UnitMultiplier`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `a`
| `cim:UnitMultiplier.a`
| n/a

| `c`
| `cim:UnitMultiplier.c`
| n/a

| `d`
| `cim:UnitMultiplier.d`
| n/a

| `da`
| `cim:UnitMultiplier.da`
| n/a

| `E`
| `cim:UnitMultiplier.E`
| n/a

| `f`
| `cim:UnitMultiplier.f`
| n/a

| `G`
| `cim:UnitMultiplier.G`
| n/a

| `h`
| `cim:UnitMultiplier.h`
| n/a

| `k`
| `cim:UnitMultiplier.k`
| n/a

| `m`
| `cim:UnitMultiplier.m`
| n/a

| `M`
| `cim:UnitMultiplier.M`
| n/a

| `micro`
| `cim:UnitMultiplier.micro`
| n/a

| `n`
| `cim:UnitMultiplier.n`
| n/a

| `none`
| `cim:UnitMultiplier.none`
| n/a

| `p`
| `cim:UnitMultiplier.p`
| n/a

| `P`
| `cim:UnitMultiplier.P`
| n/a

| `T`
| `cim:UnitMultiplier.T`
| n/a

| `y`
| `cim:UnitMultiplier.y`
| n/a

| `Y`
| `cim:UnitMultiplier.Y`
| n/a

| `z`
| `cim:UnitMultiplier.z`
| n/a

| `Z`
| `cim:UnitMultiplier.Z`
| n/a
|===